<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HSM</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Ééééééégua mlk tú és doido!</string>
    <string name="title_activity_home"></string>
    <string name="title_activity_agenda">Agenda</string>
    <string name="title_activity_detalhe_palestra">Detalhe da Palestra</string>
    <string name="title_activity_pacote">Passes</string>
    <string name="title_activity_pagamento">Pagamento</string>
    <string name="title_activity_agradecimento">Obrigado</string>
    <string name="title_activity_data1_adapter">Data 1</string>
    <string name="title_activity_data1_fragment">Data 1</string>
    <string name="title_activity_data2_fragment">Data 2</string>
    <string name="title_activity_data3_fragment">Data 3</string>
    <string name="title_activity_agenda_adapter">AgendaAdapter</string>
    <string name="title_activity_detalhe_evento">Auditório Principal</string>
    <string name="agenda">Agenda</string>
    <string name="passes">Passes</string>
    <string name="title_activity_pacote_adapter">PacoteAdapter</string>
    <string name="tipoPagamento">Escolha forma pagamento</string>
    <string name="quantidade">Escolha a quantidade</string>

    <string-array name="tipoPagamentoArray">
        <item>Cartão de Crédito</item>
    </string-array>
    <string-array name="quantidadeArray">
        <item>04 de Novembro</item>
        <item>05 de Novembro</item>
        <item>06 de Novembro</item>
    </string-array>
    <string-array name="menuList">
        <item>Home</item>
        <item>Eventos</item>
        <item>Livros</item>
        <item>Network</item>
        <item>Revistas</item>
        <item>HSM.tv</item>
        <item>News</item>
        <item>Educação</item>
    </string-array>

    <string name="voltar">Voltar</string>
    <string name="title_activity_menu_lateral">Menu</string>
    <string name="title_activity_data2_adapter">Data2Adapter</string>
    <string name="title_activity_data3_adapter">Data3Adapter</string>
    <string name="palestrantes">Palestrantes</string>
    <string name="title_activity_splash_screen2">SplashScreen2</string>
    <string name="comprar">Comprar</string>
    <string name="title_activity_break_adapter">BreakAdapter</string>
    <string name="participante">Participante</string>
    <string name="drawer_open">Abrir menu</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="drawer_close">Fechar menu</string>
    <string name="title_activity_participante">Participante</string>
    <string name="pronto">Pronto</string>
    <string name="confirmar">Confirmar</string>
    <string name="title_activity_eventos">Eventos</string>
    <string name="title_activity_lista_audutorios">Auditórios</string>
    <string name="title_activity_auditorios">Auditórios</string>
    <string name="title_activity_estacao_conhecimento">Estações do Conhecimento</string>
    <string name="title_activity_informativo">Página de Texto</string>
    <string name="title_activity_simples_adapter">SimplesAdapter</string>
    <string name="title_activity_mostra_conteudo">Mostra de Conteúdos</string>
    <string name="title_activity_bdw">Brasil Design Week</string>
    <string name="title_activity_bdwmais_informacoes">Mais Informações</string>
    <string name="title_activity_bdwagenda">Agenda</string>
    <string name="title_activity_bdwdata1_fragment">BDWData1Fragment</string>
    <string name="title_activity_bdwdata2_fragment">BDWData2Fragment</string>
    <string name="title_activity_bdwdata3_fragment">BDWData3Fragment</string>
    <string name="title_activity_bdwdata1_adapter">BDWData1Adapter</string>
    <string name="title_activity_bdwdata2_adapter">BDWData2Adapter</string>
    <string name="title_activity_bdwdata3_adapter">BDWData3Adapter</string>
    <string name="title_activity_palestrantes">Palestrantes</string>
    <string name="title_activity_bdwagenda_adapter">BDWAgendaAdapter</string>
    <string name="title_activity_palestrante_adapter">PalestranteAdapter</string>
    <string name="title_activity_banner_fragment">BannerFragment</string>
    <string name="title_activity_lista_networking">Networking</string>
    <string name="title_activity_amigo_adapter">AmigoAdapter</string>
    <string name="title_activity_meu_cartao">Criar meu cartão</string>
    <string name="title_activity_contato">Contato</string>
    <string name="title_activity_qrcode">QRCodeActivity</string>

</resources>